1.2.1.9  2016-??-??
--------------------------------------------------------------------------------

new features
  - udg(): utility function to extract properly parsed udg statistics
    e.g., M quality statitistics of X-11
  - summary() can be customized, e.g, to include M quality statitistics
  - methods for R generics: AIC(), BIC(), nobs(), logLik()

deprecated
  - arimamodel(): use the more general 'udg(x, "x13mdl")'

under the hood
  - statistics read by other functions (e.g., summary) are read by udg()
  - 'lks' output of X-13 is not produced anymore
  - on windows, use / instead of \\ in tempdir name, to be consistent with 
    file.path()


1.2.1  2016-02-11
--------------------------------------------------------------------------------

bug fixes
  - If the startup check of x13binary has failed, this prevented seasonal from   
    beeing loaded and installed. Now the startup check tells you what to do in
    such a case. This affects, e.g., Windows computers with library location set
    to an UNC path. (https://github.com/x13org/x13binary/issues/30)
  - temporarily change working directory on Windows, as X-13 (sometimes) writes
    to it. (https://github.com/x13org/x13binary/issues/28)


1.2.0  2016-01-22
--------------------------------------------------------------------------------

major changes
  - No separate binary download required anymore! seasonal now depends on the 
    x13binary package to access pre-built binaries of X-13ARIMA-SEATS for all
    platforms. Many thanks to Dirk Eddelbuettel for the fantastic work on
    x13binary!

    Installing seasonal and the binaries is now as easy as:

    install.packages('seasonal')

enhancements
  - basic X-13 tests on all CRAN platforms (except Solaris)
  - The return value of the (experimental) import.spc function has a better name
    for the main compontent ('$seas', instead of '$call').

documentation
  - updated documentation to reflect the new installation process